--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,7 +31,8 @@ http {
                'upstream_response_time=$upstream_response_time '
                'upstream_connect_time=$upstream_connect_time '
                'upstream_header_time=$upstream_header_time '
-               'ssl_client_s_dn=$ssl_client_s_dn';
+               'ssl_client_s_dn=$ssl_client_s_dn '
+               'ssl_client_i_dn=$ssl_client_i_dn';
 
     access_log  /var/log/nginx/access.log  main;
 
